# paky

./: .gitignore  Dockerfile  docker-compose.yaml  fly.toml  manage.py  pyproject.toml  requirements.txt
apps/core/: admin.py  celery.py  forms.py  models.py  views.py
apps/core/admin/: __init__.py
apps/core/fixtures/: grupos.yaml  setores.yaml
apps/core/migrations/: 0001_initial.py  0002_alter_setor_options.py
apps/core/static/: styles.css
apps/core/templates/: base.html  home.html
paky/: asgi.py  settings.py  urls.py  wsgi.py
tinderpet/: asgi.py  settings.py  urls.py  wsgi.py
