[project]
name = "paky"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django-registration-redux>=2.13",
    "django>=5.1.3",
    "django-widget-tweaks>=1.5.0",
    "whitenoise>=6.8.2",
    "django-anymail[mailjet]>=12.0",
    "django-environ>=0.11.2",
    "django-debug-toolbar>=4.4.6",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "django-jazzmin>=3.0.1",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.4.6",
    "djlint>=1.36.1",
    "pre-commit>=4.0.1",
    "ruff>=0.7.4",
]
